services/management/ntfy/cilium-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ntfy
  namespace: ntfy
spec:
  endpointSelector: {}
  ingress:
    # Web ingress from Traefik
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # Internal cluster services and alerts publishing to ntfy
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # Health checks and probes
    - fromEntities:
        - host
        - remote-node
        - health
  egress:
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    # Outbound access for iOS APNs push relay (ntfy.sh) and webhooks
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
